-Nerfed bulb bomb damage from 52 to 45 and its thorns now deal half the base damage
-Nerfed jerrys book of stinkology damage from 18 to 15
-Nerfed spider stabber damage from 25 to 20, but it now inflicts venom instead of poison
-Nerfed snot ball damage from 60 to 50 and the bouncing projectile no longer does double the damage of the weapon
-Pumptergiest projectiles now only spawn if you are holding a weapon, their damage now scales with the damage of that weapon (with a minimum of 30 damage), and reduced the minimum time for a pumpkin to spawn from 6 to 5 seconds
-Zappy Zucchini lightning now does damage equal to 8% of an enemies maximum health instead of having a flat damage value of 20


Magic Weapon Rebalancing/Reworks:

-Snot nosed tome no longer flies to your cursor, it now summons the channeled nose above you, and shoots boogers at your cursor
-Changed moocher staff projectile to be a giant cursed fire explosion that launches some cursed fireballs upward, it now does more damage, is more useful against flying targets, and visually looks better
-Arachnid leg wand reworked, it now rapidly fires out short range and short lived spider leg apparitions that can go through blocks, nerfed its damage as a result of this rework
-Jerry's book of stinkology projectile now has damage falloff each time it pierces an enemy


Accessory Rebalancing/Reworks:

-Swapped the telescope and severed heads progression (telescope is now post daffodil and severed head is now post orroboro, both of their buy/sell prices and rarity colors have been adjusted accordingly)
-Telescope's moon now grants 10% increased damage during the day and 10 defense at night along with its existing abilities
-Apocalypse mixtape telescope moon now has no damage cap for projectiles it can reflect (This does not apply to the regular telescope accessory)