@@ -18,7 +18,7 @@ namespace Spooky.Content.Items.Cemetery
 
         public override void SetDefaults()
         {
-            Item.damage = 15;
+            Item.damage = 20;
 			Item.mana = 12;
 			Item.DamageType = DamageClass.Summon;
 			Item.noMelee = true;
