@@ -10,7 +10,7 @@ namespace Spooky.Content.Items.SpookyHell
 	{
 		public override void SetDefaults() 
         {
-			Item.damage = 42;
+			Item.damage = 45;
 			Item.DamageType = DamageClass.SummonMeleeSpeed;
 			Item.noMelee = true;
 			Item.noUseGraphic = true;
