@@ -6,6 +6,8 @@ using Microsoft.Xna.Framework;
 using Microsoft.Xna.Framework.Graphics;
 using System.Collections.Generic;
 
+using Spooky.Content.Buffs.WhipDebuff;
+
 using Spooky.Content.Items.SpookyHell.Misc;
 
 namespace Spooky.Content.Projectiles.SpookyHell
@@ -31,6 +33,8 @@ namespace Spooky.Content.Projectiles.SpookyHell
 		{
 			Main.player[Projectile.owner].MinionAttackTargetNPC = target.whoAmI;
 			Projectile.damage = (int)(damageDone * 0.8f);
+
+			target.AddBuff(ModContent.BuffType<LeechWhipDebuff>(), 240);
 
 			if (Main.rand.NextBool(15))
             {
