@@ -504,3 +504,18 @@ EggplantWhipDebuff: {
 	DisplayName: Eggplant Whip Debuff
 	Description: ""
 }
+
+ShroomWhipDebuff: {
+	DisplayName: Shroom Whip Debuff
+	Description: ""
+}
+
+LeechWhipDebuff: {
+	DisplayName: Leech Whip Debuff
+	Description: ""
+}
+
+SentientLeatherWhipDebuff: {
+	DisplayName: Sentient Leather Whip Debuff
+	Description: ""
+}
